rbx_binary/src/weak/tests/snapshots/rbx_binary__weak__tests__util__default-inserted-modulescript__decoded.snap
---
source: rbx_binary/src/weak/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: ModuleScript
  class: ModuleScript
  properties:
    Attributes:
      Attributes: {}
    LinkedSource:
      ContentId: ""
    ScriptGuid:
      String: "{27E39FEB-27B7-43EC-9398-04115CF856B2}"
    Source:
      String: "local module = {}\n\nreturn module\n"
    Tags:
      Tags: []
  children: []
